# Tock

./: .gitignore  ClockWork-Project-Specification.docx  README.md  index.html  make_icon.py  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: release.yml
.tauri/: tock-updater.key  tock-updater.key.pub
scripts/: bump-version.sh
src/: App.tsx  PopupApp.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  tray-icon.rgba
src-tauri/src/: lib.rs  main.rs  tray.rs  window_state.rs
src-tauri/src/backup/: mod.rs
src-tauri/src/commands/: clients.rs  entries.rs  invoices.rs  mod.rs  settings.rs  tags.rs  timer.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 001_initial.sql  002_invoice_format.sql  003_invoice_name.sql
src/components/app/: AppErrorBoundary.tsx  ProfileSetupPrompt.tsx
src/components/command/: CommandPalette.tsx
src/components/dashboard/: DashboardView.tsx
src/components/invoices/: DateRangePicker.tsx  GenerateFlow.tsx  InvoicePDF.tsx  InvoicePdfViewer.tsx  InvoicesView.tsx
src/components/layout/: Sidebar.tsx
src/components/log/: EntryForm.tsx  EntryRow.tsx  LogFilters.tsx  MonthView.tsx  TimeLogView.tsx
src/hooks/: useClients.ts  useEntries.ts  useInvoices.ts  useSettings.ts  useTags.ts  useTimer.ts  useTimerSync.ts
src/lib/: billing.ts  commands.ts  dateUtils.ts  invoiceEmail.ts  navigation.ts  platform.ts  shortcutRegistry.ts  shortcuts.ts
src/stores/: timerStore.ts  updaterStore.ts
src/styles/: globals.css
(+9 files in other folders)
